--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -7,7 +7,7 @@
   width: 500px;
   display: flex;
   flex-direction: column;
-  padding: 50px 20px;
+  padding: 50px 30px;
   &__personal-info {
     display: flex;
     flex-direction: column;
@@ -41,6 +41,11 @@
     font-family: $elc-font;
     font-size: 18px;
     color: $color-white;
+    svg {
+      font-size: 25px;
+      margin-right: 10px;
+      color: $color-gold;
+    }
     &--name {
       font-size: 35px;
       font-weight: $font-light;
@@ -64,6 +69,11 @@
       background-color: $color-strong-blue;
       padding-right: 10px;
       color: $color-white;
+      svg {
+        font-size: 25px;
+        margin-right: 10px;
+        color: $color-gold;
+      }
     }
   }
   &__text-with-line:after {
