--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -1,13 +1,12 @@
-@import "variables.scss";
+@import "../variables.scss";
 
 .sidebar {
-  position: absolute;
-  left: 0;
   background-color: $color-strong-blue;
-  width: 500px;
+  width: 40%;
   display: flex;
   flex-direction: column;
   padding: 50px 30px;
+  max-width: 400px;
   &__personal-info {
     display: flex;
     flex-direction: column;
