--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 // Typography
 $elc-font: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-bold: 700;
+$font-medium: 500;
 $font-light: 100;
 
 // Width rules
