--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,7 +11,9 @@ $big-screen: 1920px;
 $laptop: 1024px;
 
 // Colors
-$color-strong-blue: #110096;
+$color-black: #000000;
 $color-gold: #f3c109;
-$color-white: #ffffff;
+$color-light-gray: #cccccc;
 $color-old-gold: #938963;
+$color-strong-blue: #110096;
+$color-white: #ffffff;
