--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -35,6 +35,18 @@
       font-size: 18px;
       color: $color-white;
     }
+    &--row {
+      display: flex;
+      flex-direction: row;
+      list-style: circle;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      li {
+        font-size: 18px;
+        margin: 0 20px;
+        color: $color-black;
+      }
+    }
   }
   &__text {
     font-family: $elc-font;
