--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -47,6 +47,13 @@
         color: $color-black;
       }
     }
+    &--big {
+      li {
+        font-size: 25px;
+        margin-right: 30px;
+        line-height: 50px;
+      }
+    }
   }
   &__text {
     font-family: $elc-font;
