Make sidebar works using the mock file

--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -59,6 +59,11 @@
     font-family: $elc-font;
     font-size: 18px;
     color: $color-white;
+    a {
+      font-family: $elc-font;
+      font-size: 18px;
+      color: $color-white;
+    }
     svg {
       font-size: 25px;
       margin-right: 10px;
