--- a/src/styles/pages/mycv.scss
+++ b/src/styles/pages/mycv.scss
@@ -49,7 +49,7 @@
     line-height: 27px;
     text-align: left;
     &--with-indentation {
-      padding: 0 30px;
+      padding: 0 0 0 110px;
       font-style: italic;
     }
   }
